[package]
name = "cordoba"
description = "Zero-copy and mmapable CDB access library with a Python interface"
version = "0.1.1"
authors = ["Jonathan Bastien-Filiatrault <joe@x2a.org>"]

homepage = "https://github.com/jothan/cordoba"
repository = "https://github.com/jothan/cordoba.git"
license = "GPL-3.0+"
readme = "README.md"
keywords = ["cdb", "python"]
categories = ["database", "data-structures", "config", "filesystem"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"

[dependencies]
byteorder = "1"
clap = { version="2.31", optional=true }
memmap = { version="0.6.2", optional=true }

[dependencies.pyo3]
version = "0.2"
optional = true

[features]
default = ["build-binary"]
build-binary = ["clap", "memmap"]
python = ["pyo3", "memmap"]

[[bin]]
name = "cdb"
required-features = ["build-binary"]

[[bin]]
name = "cdbwrite"
required-features = ["build-binary"]
