[package]
name = "cordoba"
description = "Zero-copy and mmapable CDB access library with a Python interface"
version = "0.3.2"
authors = ["Jonathan Bastien-Filiatrault <joe@x2a.org>"]
edition = "2018"

homepage = "https://github.com/jothan/cordoba"
repository = "https://github.com/jothan/cordoba.git"
license = "GPL-3.0+"
readme = "README.md"
keywords = ["cdb", "python"]
categories = ["database", "data-structures", "config", "filesystem", "no-std"]

[profile.release]
panic = "abort"

[dependencies]
clap = { version="2.31", optional=true }
memmap = { version="0.7.0", optional=true }
pyo3 = { version="=0.9.0-alpha.1", optional=true }

[features]
default = ["build-binary", "std"]
build-binary = ["clap", "memmap"]
std = []
python = ["pyo3"]

[[bin]]
name = "cdb"
required-features = ["build-binary"]

[[bin]]
name = "cdbwrite"
required-features = ["build-binary"]

[workspace]
members = ["cordoba-py"]
