[package]
name = "cordoba-py"
description = "Cordoba Python interface"
version = "0.1.1"
authors = ["Jonathan Bastien-Filiatrault <joe@x2a.org>"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"

[dependencies]
memmap = { version="0.6.2" }
cordoba = { path = ".." }

[dependencies.pyo3]
version = "0.5"

