[package]
name = "cordoba-py"
description = "Cordoba Python interface"
version = "0.2.0"
authors = ["Jonathan Bastien-Filiatrault <joe@x2a.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
memmap = { version="0.7.0" }
cordoba = { path = ".." }

[dependencies.pyo3]
version = "0.6.0-alpha.2"
features = ["extension-module"]

