[package]
name = "cordoba-py"
description = "Cordoba Python interface"
version = "0.3.1"
authors = ["Jonathan Bastien-Filiatrault <joe@x2a.org>"]
edition = "2018"
homepage = "https://github.com/jothan/cordoba"
repository = "https://github.com/jothan/cordoba.git"
license = "GPL-3.0+"
keywords = ["cdb", "python"]
categories = ["database", "data-structures", "config", "filesystem", "no-std"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
memmap = { version="0.7.0" }
cordoba = { path = "..", features=["python"] }

[dependencies.pyo3]
version = "=0.9.0-alpha.1"
features = ["extension-module"]
